k8s/frontend-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: notes-frontend
  namespace: notes
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`notes.jarnomets.com`)
      kind: Rule
      services:
        - name: frontend
          port: 80
          scheme: http
  tls:
    secretName: notes-tls
